# Data-Science-and-Ethics-HE

./: 13b_MS-SEAL.h  CMakeLists.txt  README.md  addition.cpp  determinant.cpp  multiplication.cpp  multiplication_sq.cpp  subtraction.cpp  transpose.cpp
